@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main"/>
-	<classpathentry kind="src" path="src/jdk15"/>
 	<classpathentry kind="src" path="test/src"/>
+	<classpathentry kind="src" path="src/jdk15"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="lib" path="3rdparty/junit.jar"/>
 	<classpathentry kind="lib" path="3rdparty/bsh-2.0b4.jar"/>
@@ -11,6 +11,6 @@
 	<classpathentry kind="lib" path="3rdparty/qdox-1.6.1.jar"/>
 	<classpathentry kind="var" path="TOOLS15_LIB"/>
 	<classpathentry kind="lib" path="3rdparty/backport-util-concurrent-2.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.5.0"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.5.0 (MacOS X Default)"/>
 	<classpathentry kind="output" path="z_build"/>
 </classpath>
