@@ -1,7 +1,8 @@
 ===========================================================================
 5.7
 
-Fixed: If a method with invocationCount fails, the others will now be skipped
+Fixed: Don't run a @DataProvider method as a test when a class-level @Test is present
+Added: Attribute @Test#skipFailedInvocations
 Fixed: TESTNG-169 Error message: <method> is depending on nonexistent method null ("null" is uninformative)
 Fixed: -listener takes comma-separated classes
 Added: RetryAnalyzer (experimental) (Jeremie)
